@@ -1,2 +1,8 @@
 # java_library_app
  
+1. Activate your XAMPP
+2. import .sql file in phpmyadmin
+3. import this project to Inttelij IDEA
+4. add javafx library in File -> Project Structure -> Libraries
+5. add the VM option "--module-path /path/to/javafx-sdk-15.0.1/lib --add-modules javafx.controls,javafx.fxml" in Run ->  Edit Configurations -> VM options 
+6. Build & Run the project 
